fix: package details an github actions

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-    "name": "clamscan",
-    "version": "2.4.0",
-    "author": "Kyle Farris <kyle.farris@infotechinc.com> (https://infotechinc.com)",
-    "description": "Use Node JS to scan files on your server with ClamAV's clamscan/clamdscan binary or via TCP to a remote server or local UNIX Domain socket. This is especially useful for scanning uploaded files provided by un-trusted sources.",
+    "name": "@internxt/scan",
+    "version": "1.0.0",
+    "description": "Use Node JS to scan files on your server with ClamAV's clamdscan binary or via TCP to a remote server or local UNIX Domain socket. This is especially useful for scanning uploaded files provided by un-trusted sources.",
     "main": "index.js",
     "contributors": [
         "dietervds",
@@ -21,10 +20,6 @@
         "lint:fix": "node_modules/.bin/eslint --fix '**/*.js'",
         "test": "make test"
     },
-    "repository": {
-        "type": "git",
-        "url": "git@github.com:kylefarris/clamscan.git"
-    },
     "keywords": [
         "clamav",
         "virus",
@@ -38,9 +33,6 @@
     "license": "MIT",
     "engines": {
         "node": ">=16.0.0"
-    },
-    "bugs": {
-        "url": "https://github.com/kylefarris/clamscan/issues"
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.19.1",
