--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish package in github package registry
+name: Publish Scan package in github package registry
 on:
     release:
         types: [created]
@@ -7,6 +7,9 @@ on:
 jobs:
     build:
         runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                node-version: [22.12.0]
         permissions:
             contents: read
             packages: write
@@ -15,7 +18,7 @@ jobs:
             # Setup .npmrc file to publish to GitHub Packages
             - uses: actions/setup-node@v2
               with:
-                  node-version: '20.x'
+                  node-version: ${{matrix.node-version}}
                   registry-url: 'https://npm.pkg.github.com'
             - run: yarn
               env:
