--- a/package.json
+++ b/package.json
@@ -51,7 +51,5 @@
         "mocha": "^10.1.0",
         "prettier": "^3.2.5"
     },
-    "dependencies": {
-        "p-limit": "3.1.0"
-    }
+    "dependencies": {}
 }
