--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "@internxt/scan",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "author": "Kyle Farris <kyle.farris@infotechinc.com> (https://infotechinc.com)",
     "description": "Use Node JS to scan files on your server with ClamAV's clamscan/clamdscan binary or via TCP to a remote server or local UNIX Domain socket. This is especially useful for scanning uploaded files provided by un-trusted sources.",
     "main": "index.js",
+    "types": "types/index.d.ts",
     "contributors": [
         "dietervds",
         "nicolaspeixoto",
@@ -37,6 +38,7 @@
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.19.1",
+        "@types/node": "^22.13.8",
         "axios": "^1.2.0",
         "chai": "^4.4.1",
         "chai-as-promised": "^7.1.1",
